syntax = "proto3";

package hvxahv.v1alpha1.proto;
option go_package = "github.com/hvxahv/hvx/api/article/v1alpha";

service Article {
  // GetArticle Get the content of an article or status by its article ID.
  rpc GetArticle(GetArticleRequest) returns (GetArticleResponse) {}

  // GetArticlesByAccountID Get all posts or statuses published under this account by account ID.
  rpc GetArticlesByAccountID(GetArticlesByAccountIDRequest) returns (GetArticlesByAccountIDResponse) {}

  // CreateArticle Create article or status.
  rpc CreateArticle(CreateArticleRequest) returns (CreateArticleResponse) {}

  // UpdateArticle Edit article or status content.
  rpc UpdateArticle(UpdateArticleRequest) returns (UpdateArticleResponse) {}

  // DeleteArticle Delete a post or status by post or status ID.
  rpc DeleteArticle(DeleteArticleRequest) returns (DeleteArticleResponse) {}
}

message GetArticleRequest {
  string id = 1;
}

message GetArticleResponse {
  string code = 1;
  string id = 2;
  CreateArticleRequest article = 3;
}

message GetArticlesByAccountIDRequest {
  string account_id = 1;
}

message GetArticlesByAccountIDResponse {
  string code = 1;
  repeated CreateArticleRequest articles = 2;
}

message CreateArticleRequest {
  string id= 1;
  string account_id = 2;
  string title = 3;
  string summary = 4;
  string article = 5;
  repeated string tags = 6;
  string attachmentType = 7;
  repeated string attachments = 8;
  repeated string to = 9;
  repeated string cc = 10;
  bool state = 11;
  bool nsfw = 12;
  string visibility = 13;
}

message CreateArticleResponse {
  string code = 1;
  string reply = 2;
}

message UpdateArticleRequest {
  string id = 1;
  string account_id = 2;
  string title = 3;
  string summary = 4;
  string article = 5;
  repeated string tags = 6;
  string attachmentType = 7;
  repeated string attachments = 8;
  bool nsfw = 9;
  string visibility = 10;
}

message UpdateArticleResponse {
  string code = 1;
  string reply = 2;
}

message DeleteArticleRequest {
  string id = 1;
  string account_id = 2;
}

message DeleteArticleResponse {
  string code = 1;
  string reply = 2;
}